# hopper-mcp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
corpus/: live-large-apps.json  live-smoke.json
crates/hopper-mcpd/: Cargo.toml
crates/hopper-mcpd/src/: address.rs  backend.rs  content.rs  doctor.rs  lib.rs  live.rs  main.rs  model.rs  persistence.rs  prompts.rs  protocol.rs  query.rs  resources.rs  store.rs  tools.rs  transactions.rs
crates/hopper-mcpd/tests/: backend_contract.rs  doctor_contract.rs  fixtures.rs  live_bridge_contract.rs  mcp_contract.rs  persistence_contract.rs  protocol_contract.rs  stdio.rs  store_contract.rs  transaction_contract.rs
crates/hopper-wire/: Cargo.toml
crates/hopper-wire/src/: lib.rs
crates/hopper-wire/tests/: private_backend_contract.rs  wire_contract.rs
docs/: adapter-protocol.md  hopper-app-integration-research.md  official-hopper-mcp-notes.md  official-hoppermcpserver-re.md
scripts/: cleanup-hopper-state.mjs  distribution-check.mjs  fetch-hopper-sdk.mjs  hopper-plugin-runtime.mjs  internal-production-check.mjs  internal-soak-check.mjs  live-check.mjs  live-corpus.mjs  package-release.mjs  plugin-live-check.mjs  private-backend-check.mjs  private-backend-runtime.mjs  public-production-check.mjs  public-release-check.mjs  release-check.mjs
src/: debug-log.js  hopper-adapter.js  hopper-bridge.js  hopper-cleanup.js  hopper-live.js  knowledge-store.js  live-bridge-cli.js  macho-importer.js  mcp-server.js  official-hopper-backend.js  official-snapshot.js  research-tools.js  (+9 more)
(+72 files in other folders)
