[package]
name = "hopper-wire"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Versioned daemon-to-Hopper-agent protocol for Hopper MCP."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
